--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -351,6 +351,27 @@
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/openListOfCitiesButton"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/list" />
+
+            <ImageView
+                android:id="@+id/openWeatherOnLocationNutton"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/location" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
