--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="clearSky">#8ECCFE</color>
     <color name="gray">#40B9B9B9</color>
     <color name="textGray">#C93E3C3C</color>
+    <color name="backgroundGray">#2B2828</color>
 </resources>
