--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/tempNow"
+                android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="34sp"
                 android:textStyle="italic"
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="@string/partly_cloudy"
+                android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="64dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="H:25"
+                android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
                 android:fontFamily="sans-serif-medium"
-                android:text="L:21"
+                android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -172,7 +172,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:fontFamily="sans-serif-medium"
-                    android:text="1"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
@@ -182,7 +182,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="6dp"
                     android:fontFamily="sans-serif-medium"
-                    android:text="@string/low"
+                    android:text="@string/none"
                     android:textColor="@color/white" />
             </LinearLayout>
 
@@ -212,7 +212,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="end"
-                    android:text="20:00"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -245,7 +245,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
-                    android:text="@string/_6_m_s"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
 
@@ -255,7 +255,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
-                    android:text="@string/ne"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -284,7 +284,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
-                    android:text="@string/_45"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -317,7 +317,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="center"
-                    android:text="@string/_15_km"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
@@ -348,7 +348,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="sans-serif-medium"
                     android:gravity="end"
-                    android:text="@string/_0mm"
+                    android:text="@string/none"
                     android:textColor="@color/white"
                     android:textSize="20sp" />
             </LinearLayout>
