--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -16,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".fragments.CityWeatherFragment">
 
