--- a/app/src/main/res/layout/view_holder_city_weather.xml
+++ b/app/src/main/res/layout/view_holder_city_weather.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraionLayoutCity"
+    android:id="@+id/constraintLayoutCity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
     android:background="@drawable/shape"
-    android:backgroundTint="@color/clearSky">
+    android:backgroundTint="@color/clearSky"
+    android:transitionName="cityWeatherFragment">
 
     <TextView
         android:id="@+id/nameCity"
