Добавлен красный цвет на фоне при свайпе города с погодой вправо, убраны закругленные края

--- a/app/src/main/res/layout/view_holder_city_weather.xml
+++ b/app/src/main/res/layout/view_holder_city_weather.xml
@@ -5,9 +5,9 @@
     android:id="@+id/constraintLayoutCity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:background="@drawable/shape"
-    android:backgroundTint="@color/clearSky"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
+    android:background="@color/clearSky"
     android:transitionName="cityWeatherFragment">
 
     <TextView
