Улучшены градиенты, добавлен знак загрузки при поиске городов, добавлен на экран поиска слушатель изменения интернета

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,8 @@
     <color name="morning_yellow">#FFA618</color>
     <color name="noon_dark_blue">#00538A</color>
     <color name="noon_light_blue">#87CEEB</color>
-    <color name="rainy">#606E8C</color>
+    <color name="light_rainy1">#3E5F8A</color>
+    <color name="light_rainy2">#6C6960</color>
+    <color name="heavy_rainy1">#293133</color>
+    <color name="heavy_rainy2">#919192</color>
 </resources>
