--- a/app/src/main/res/drawable/noon_gradient.xml
+++ b/app/src/main/res/drawable/noon_gradient.xml
@@ -3,8 +3,8 @@
     <gradient
         android:type="linear"
         android:startColor="@color/noon_light_blue"
-        android:endColor="@color/noon_dark_blue"
-        android:angle="90"/>
+        android:endColor="@color/morning_yellow"
+        android:angle="45"/>
     <corners
         android:radius="0dp"/>
 
