--- a/app/src/main/res/drawable/evening_big_gradient.xml
+++ b/app/src/main/res/drawable/evening_big_gradient.xml
@@ -3,6 +3,7 @@
     android:color="@color/gray">
     <item android:id="@+id/mask">
         <shape android:shape="rectangle">
+            <solid android:color="@color/gray" />
         </shape>
     </item>
 
@@ -10,10 +11,10 @@
         <shape android:shape="rectangle">
             <gradient
                 android:angle="45"
-                android:endColor="@color/light_rainy1"
-                android:startColor="@color/light_rainy2"
+                android:endColor="@color/evening_blue"
+                android:startColor="@color/evening_orange"
                 android:type="linear" />
-            <corners android:radius="15dp" />
+            <corners android:radius="0dp" />
         </shape>
     </item>
 </ripple>
