--- a/app/src/main/res/drawable/morning_gradient.xml
+++ b/app/src/main/res/drawable/morning_gradient.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <gradient
-        android:type="linear"
-        android:startColor="@color/morning_yellow"
-        android:endColor="@color/morning_cyan"
-        android:angle="45"/>
-    <corners
-        android:radius="0dp"/>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/gray">
+    <item android:id="@+id/mask">
+        <shape android:shape="rectangle">
+        </shape>
+    </item>
 
-
-</shape>
+    <item android:id="@android:id/background">
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="45"
+                android:endColor="@color/morning_cyan"
+                android:startColor="@color/morning_yellow"
+                android:type="linear" />
+            <corners android:radius="15dp" />
+        </shape>
+    </item>
+</ripple>
