--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -25,14 +25,15 @@
                 android:id="@+id/cityName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="sans-serif-black"
                 android:text="@string/cityName"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/openPreviousScreen" />
 
             <TextView
                 android:id="@+id/tempNow"
@@ -44,9 +45,11 @@
                 android:textColor="@color/white"
                 android:textSize="34sp"
                 android:textStyle="italic"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cityName" />
+                app:layout_constraintTop_toBottomOf="@+id/cityName"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/textWeather"
@@ -57,9 +60,11 @@
                 android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tempNow" />
+                app:layout_constraintTop_toBottomOf="@+id/tempNow"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tempMax"
@@ -70,9 +75,11 @@
                 android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textWeather" />
+                app:layout_constraintTop_toBottomOf="@+id/textWeather"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tempMin"
@@ -83,9 +90,11 @@
                 android:text="@string/none"
                 android:textColor="@color/white"
                 android:textSize="16sp"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textWeather" />
+                app:layout_constraintTop_toBottomOf="@+id/textWeather"
+                tools:visibility="visible" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_7DayForecast"
@@ -95,10 +104,12 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shape"
+                android:visibility="gone"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_7DayForecast" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_7DayForecast"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/tv_7DayForecast"
@@ -111,8 +122,10 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tempMax" />
+                app:layout_constraintTop_toBottomOf="@+id/tempMax"
+                tools:visibility="visible" />
 
             <LinearLayout
                 android:id="@+id/uvIndexLinearLayout"
@@ -122,9 +135,10 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/shape"
                 android:orientation="vertical"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_7DayForecast">
+                app:layout_constraintTop_toBottomOf="@+id/rv_7DayForecast"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_UVIndex"
@@ -162,8 +176,10 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shape"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_7DayForecast">
+                app:layout_constraintTop_toBottomOf="@+id/rv_7DayForecast"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_sunset"
@@ -194,9 +210,11 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shape"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@+id/sunsetLinearLayout"
                 app:layout_constraintStart_toEndOf="@+id/uvIndexLinearLayout"
-                app:layout_constraintTop_toBottomOf="@+id/rv_7DayForecast">
+                app:layout_constraintTop_toBottomOf="@+id/rv_7DayForecast"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_wind"
@@ -236,8 +254,10 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/shape"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/windLinearLayout">
+                app:layout_constraintTop_toBottomOf="@+id/windLinearLayout"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_humidity"
@@ -266,9 +286,11 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shape"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@+id/precipitationLinearLayout"
                 app:layout_constraintStart_toEndOf="@+id/humidityLinearLayout"
-                app:layout_constraintTop_toBottomOf="@+id/windLinearLayout">
+                app:layout_constraintTop_toBottomOf="@+id/windLinearLayout"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_visibility"
@@ -298,8 +320,10 @@
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/shape"
                 android:orientation="vertical"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/sunsetLinearLayout">
+                app:layout_constraintTop_toBottomOf="@+id/sunsetLinearLayout"
+                tools:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_precipitation"
@@ -327,6 +351,8 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
+                android:focusable="true"
+                android:background="?attr/selectableItemBackground"
                 android:src="@drawable/back_arrow"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -335,6 +361,7 @@
                 android:id="@+id/errorText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="256dp"
                 android:fontFamily="sans-serif-black"
                 android:gravity="center"
                 android:paddingStart="16dp"
@@ -344,10 +371,10 @@
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:visibility="gone"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cityName"
                 tools:visibility="visible" />
 
             <Button
@@ -359,16 +386,10 @@
                 android:text="@string/add"
                 android:textSize="16sp"
                 android:visibility="gone"
+                android:background="?attr/selectableItemBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:visibility="visible" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.6" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
