--- a/app/src/main/res/layout/view_holder_city_weather.xml
+++ b/app/src/main/res/layout/view_holder_city_weather.xml
@@ -2,11 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraintLayoutCity"
+    android:id="@+id/constraintLayoutCurrentLocation"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
-    android:layout_marginBottom="8dp"
+    android:layout_margin="8dp"
     android:background="@color/clearSky"
     android:transitionName="cityWeatherFragment">
 
