--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -345,17 +345,19 @@
                     android:textSize="20sp" />
             </LinearLayout>
 
-            <ImageView
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/openPreviousScreen"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:background="?attr/selectableItemBackground"
-                android:focusable="true"
-                android:src="@drawable/back_arrow"
+                android:layout_marginTop="16dp"
+                app:icon="@drawable/back_arrow"
+                app:iconSize="32dp"
+                app:iconTint="@color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:rippleColor="@color/gray"/>
 
             <TextView
                 android:id="@+id/errorText"
@@ -377,18 +379,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/cityName"
                 tools:visibility="visible" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/addButton"
-                style="@android:style/Widget.Material.Light.Button.Borderless"
+                style="@style/ThemeOverlay.Material3.Button.TextButton"
                 android:layout_width="128dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:background="?attr/selectableItemBackground"
                 android:text="@string/add"
+                android:textAlignment="center"
+                android:textColor="@color/white"
                 android:textSize="16sp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:rippleColor="@color/gray"
                 tools:visibility="visible" />
 
             <ProgressBar
