--- a/app/src/main/res/layout/fragment_search_cities.xml
+++ b/app/src/main/res/layout/fragment_search_cities.xml
@@ -9,46 +9,34 @@
     tools:context=".fragments.SearchCitiesFragment">
 
 
-    <ImageView
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/backArrow"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        style="@style/Widget.Material3.Button.IconButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:icon="@drawable/back_arrow"
+        app:iconSize="32dp"
+        app:iconTint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/back_arrow" />
+        app:rippleColor="@color/gray" />
 
-    <EditText
-        android:id="@+id/queryLine"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/shape"
-        android:hint="@android:string/search_go"
-        android:imeOptions="actionSearch"
-        android:inputType="text"
-        android:maxWidth="80dp"
-        android:minHeight="48dp"
-        android:textColor="@color/white"
-        android:textColorHint="#80FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/searchButton"
-        app:layout_constraintStart_toEndOf="@+id/backArrow"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/searchButton"
-        style="@android:style/Widget.Material.Light.Button.Borderless"
+        style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="#FF8A65"
+        android:backgroundTint="@color/backgroundGray"
         android:text="@android:string/search_go"
+        android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:rippleColor="@color/gray" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cities"
@@ -57,24 +45,28 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:visibility="gone"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/queryLine"
+        app:layout_constraintTop_toBottomOf="@+id/queryLineLayout"
+        app:layout_constraintVertical_bias="0.0"
         tools:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/searchProgress"
-        android:layout_width="32dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:indeterminate="true"
         android:indeterminateTint="@color/white"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="@+id/queryLine"
-        app:layout_constraintTop_toTopOf="@+id/queryLine" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/queryLineLayout"
+        app:layout_constraintVertical_bias="0.41000003" />
 
     <TextView
         android:id="@+id/cityPlaceholder"
@@ -83,11 +75,40 @@
         android:fontFamily="sans-serif-black"
         android:text="@string/city_placeholder"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/queryLine"
+        app:layout_constraintTop_toBottomOf="@+id/queryLineLayout"
         app:layout_constraintVertical_bias="0.39" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/queryLineLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:hint="@android:string/search_go"
+        app:boxCornerRadiusBottomEnd="20dp"
+        app:boxCornerRadiusBottomStart="20dp"
+        app:boxCornerRadiusTopEnd="20dp"
+        app:boxCornerRadiusTopStart="20dp"
+        app:endIconDrawable="@drawable/clear"
+        app:endIconMode="clear_text"
+        app:endIconTint="@color/white"
+        app:layout_constraintEnd_toStartOf="@+id/searchButton"
+        app:layout_constraintStart_toEndOf="@+id/backArrow"
+        app:layout_constraintTop_toTopOf="parent"
+        app:startIconDrawable="@drawable/search">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/queryLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="actionSearch"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
