--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -359,6 +359,20 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:rippleColor="@color/gray" />
 
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/openShareBottomSheet"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                app:icon="@drawable/share"
+                app:iconSize="32dp"
+                app:iconTint="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:rippleColor="@color/gray" />
+
             <TextView
                 android:id="@+id/errorText"
                 android:layout_width="wrap_content"
@@ -377,23 +391,6 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cityName"
-                tools:visibility="visible" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/addButton"
-                style="@style/ThemeOverlay.Material3.Button.TextButton"
-                android:layout_width="128dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:background="?attr/selectableItemBackground"
-                android:text="@string/add"
-                android:textAlignment="center"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:rippleColor="@color/gray"
                 tools:visibility="visible" />
 
             <ProgressBar
